Accessibly label invisible close button and fix background for cover overlay

--- a/src/assets/site.css
+++ b/src/assets/site.css
@@ -525,6 +525,7 @@ path.loading_right {
     }
 }
 #overlay {
+    background: transparent;
     border: none;
     padding: 0;
 }
